# nexusGate

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOY-RAILWAY.md  DEPLOY.md  Dockerfile  Makefile  README.md  STRIPE.md  alembic.ini  docker-compose.yml  fly.staging.toml  fly.toml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  prune-logs.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_provider_key_fields.py  0003_observability_vkeys.py  0004_leads.py  0005_sub_period_lead_unique.py  0006_guardrails.py  0007_tenant_routing_mode.py
app/: __init__.py  config.py  logging_config.py  main.py  metrics.py  ratelimit.py  redis_client.py
app/api/: __init__.py  admin.py  billing.py  chat.py  health.py  leads.py  openai_compat.py  owner.py  provider_keys.py  proxy.py  schemas.py  seed.py  usage.py
app/auth/: __init__.py  api_key.py  supabase.py  tokens.py
app/billing/: __init__.py  plans.py  service.py
app/cache/: __init__.py  embedder.py  semantic.py
app/crypto/: __init__.py  envelope.py
app/db/: __init__.py  base.py  models.py  session.py
app/providers/: __init__.py  service.py  (+1 more)
scripts/: eval_router.py  gen_og_image.py  prune_usage_logs.py  seed_dashboard.py  seed_local.py  sim_finance.py  stripe_smoke.py
sdk/: pyproject.toml
tests/: test_api_key.py  test_auth_endpoints.py  test_billing.py  test_cache.py  test_crypto.py  test_email_policy.py  test_health.py  test_net.py  test_pii.py  test_provider_error.py  test_providers.py  test_router.py  test_security_fixes.py  test_seo.py
(+33 files in other folders)
